Alignment issue
Accidently had yesterdays answer misaligned

--- a/css/style.css
+++ b/css/style.css
@@ -1193,7 +1193,6 @@ body.infinite-mode .yesterdays-answer {
 
     #game-container,
     .header-bar,
-    .yesterdays-answer,
     .victory-content,
     .info-box,
     .changelog-box,
